KubernetesHAProxyIngress/haproxytest-ingress-api-aadtls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: haproxytest-echo-hostname
  namespace: haproxytest-ns
spec:
  tls:
  - hosts:
    - changemanager.fcm.msftcloudes.com
    secretName: haproxytest-secret-tls
  rules:
  - host: changemanager.fcm.msftcloudes.com
    http:
      paths:
      - backend:
          serviceName: echo-hostname
          servicePort: 5000
        path: /echo-hostname/
